--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ hr {
     -moz-border-left-colors: none;
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
-    border-color: #EEEEEE -moz-use-text-color #FFFFFF;
+    border-color: #EEEEEE;
     border-style: solid none;
     border-width: 1px 0;
     margin: 18px 0;
