--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,23 @@
+
 body {
-    background-image: url("../img/bg.jpg");
-    color: white;
+    color: black;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .spacing {
     margin-top: 30px;
 }
 
-span.movie-title {
-    font-size: 18px;
+.navbar-brand {
+ font-weight: bolder;
+}
+
+#pageTitle {
+    margin-top: 80px;
+}
+
+td.movie-details {
     text-decoration: underline;
     cursor: pointer;
     display: block;
@@ -26,35 +35,24 @@ hr {
     margin: 18px 0;
 }
 
-.bk-btn {
-    height: 52px;
-    width: 52px;
-    background-color: transparent;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.bk-btn .bk-btn-triangle {
-    position: relative;
-    top: 13px;
-    left: 10.4px;
-    width: 0;
-    height: 0;
-    border-top: 13px solid transparent;
-    border-bottom: 13px solid transparent;
-    border-right: 13px solid white;
-}
-
-.bk-btn .bk-btn-bar {
-    position: relative;
-    background-color: white;
-    height: 7.8px;
-    width: 13px;
-    top: -3.64px;
-    left: 22.88px;
-}
-
 .filled-star, .unfilled-star {
     height: 48px;
     width: 48px;
+}
+
+#searchForm {
+    margin: 0 auto;
+    width: 30% /* value of your choice which suits your alignment */
+}
+
+#searchForm div, #searchForm input, #searchForm button {
+    font-size: 20px;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+#recommendedMovies {
+    width: 50%
 }
